--- a/package.json
+++ b/package.json
@@ -3,11 +3,64 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "@mswjs/data": "^0.8.4",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
+    "@popperjs/core": "2.11.5",
+    "@reach/dialog": "^0.17.0",
+    "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@types/eslint": "^8.4.5",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "18.0.5",
+    "@types/react-loader-spinner": "^4.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
+    "@types/validatorjs": "3.15.0",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
+    "bootstrap": "5.1.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.6.0",
+    "dotenv": "^16.0.1",
+    "eslint": "8.18.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-prettier": "4.1.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "8.0.1",
+    "jsx": "^0.9.89",
+    "lint-staged": "13.0.3",
+    "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "prettier": "2.7.1",
+    "prettier-stylelint": "0.4.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.12.0",
     "faker": "^4.1.0",
@@ -16,17 +69,36 @@
     "msw": "^0.36.3",
     "react": "^17",
     "react-dom": "^17",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.1.2",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^4",
+    "react-select": "^5.4.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "seedrandom": "^3.0.5",
-    "txtgen": "^2.2.4"
+    "style-loader": "^3.3.1",
+    "stylelint": "14.9.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "26.0.0",
+    "stylelint-order": "5.0.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
+    "txtgen": "^2.2.4",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "npx webpack build --mode development",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "dev": "cross-env NODE_ENV=\"development\" webpack serve",
+    "prod": "cross-env NODE_ENV=\"production\" webpack build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,7 +116,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.2"
+    "react-scripts": "^5.0.1"
   },
   "msw": {
     "workerDirectory": "public"
