--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
-    "@mswjs/data": "^0.8.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mswjs/data": "^0.8.4",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
@@ -21,10 +21,11 @@
     "@reach/dialog": "^0.17.0",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@rollup/plugin-replace": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@rollup/plugin-replace": "^4.0.0",
+    "@types/classnames": "^2.3.1",
     "@types/eslint": "^8.4.5",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/lodash": "^4.14.182",
@@ -41,8 +42,10 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "bootstrap": "5.1.3",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
+    "date-fns": "^2.12.0",
     "dotenv": "^16.0.1",
     "eslint": "8.18.0",
     "eslint-config-airbnb": "19.0.4",
@@ -52,21 +55,19 @@
     "eslint-plugin-prettier": "4.1.0",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "faker": "^4.1.0",
     "husky": "8.0.1",
     "jsx": "^0.9.89",
     "lint-staged": "13.0.3",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
+    "miragejs": "^0.1.35",
+    "mock-socket": "^9.0.3",
+    "msw": "^0.36.3",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prettier": "2.7.1",
     "prettier-stylelint": "0.4.2",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.12.0",
-    "faker": "^4.1.0",
-    "miragejs": "^0.1.35",
-    "mock-socket": "^9.0.3",
-    "msw": "^0.36.3",
     "react": "^17",
     "react-dom": "^17",
     "react-icons": "^4.4.0",
@@ -85,8 +86,8 @@
     "stylelint-order": "5.0.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4",
     "txtgen": "^2.2.4",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
